--- a/display/src/main/resources/application.yml
+++ b/display/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8081
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 3000
