Hystrix - Circuit Breaker 적용 #2

--- a/display/src/main/resources/application.yml
+++ b/display/src/main/resources/application.yml
@@ -3,8 +3,11 @@ server:
 
 hystrix:
   command:
-    default:
+    productInfo:
       execution:
         isolation:
           thread:
             timeoutInMilliseconds: 3000
+      circuitBreaker:
+        requestVolumeThreshold: 1
+        errorThresholdPercentage: 50
