--- a/display/src/main/resources/application.yml
+++ b/display/src/main/resources/application.yml
@@ -11,3 +11,9 @@ hystrix:
       circuitBreaker:
         requestVolumeThreshold: 1
         errorThresholdPercentage: 50
+
+product:
+  ribbon:
+    listOfServers: localhost:8082, localhost:7777
+    MaxAutoRetries: 0
+    MaxAutoRetriesNextServer: 1
