--- a/display/src/main/resources/application.yml
+++ b/display/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8081
 
+spring:
+  application:
+    name: display
+
 hystrix:
   command:
     productInfo:
@@ -14,6 +18,13 @@ hystrix:
 
 product:
   ribbon:
-    listOfServers: localhost:8082, localhost:7777
+#    listOfServers: localhost:8082, localhost:7777
     MaxAutoRetries: 0
     MaxAutoRetriesNextServer: 1
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    server-url:
+      defaultZone: http://127.0.0.1:8761/eureka
