--- a/build.gradle
+++ b/build.gradle
@@ -47,18 +47,20 @@ project(':display') {
         compile 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
         compile 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
         compile 'org.springframework.retry:spring-retry:1.2.2.RELEASE'
+        compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     }
 }
 
 project(':product') {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
+        compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     }
 }
 
 project(':eureka-server') {
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-web'
+        compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
     }
 }
 
