--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 8082
+
+spring:
+  application:
+    name: product
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    server-url:
+      defaultZone: http://127.0.0.1:8761/eureka
